--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./style.css">
-  <script src="./app.js"></script>
+  <script src="./app.js" defer></script>
   <title>Frontend Mentor | Expenses chart component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -20,7 +20,7 @@
   
  
   <header>
-      <div class="flex row">
+      <div class="flex row align-center">
           <div>
             <p>My balance</p>
             <h2 class="cost-heading">$921.48</h2>
